<?xml version="1.0"?>
<package format="2">
  <name>webtest</name>
  <version>2.0.18</version>
  <description>
  Wraps any WSGI application and makes it easy to send test requests to that application, without starting up an HTTP server. http://webtest.readthedocs.io/en/latest/
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/pyros-config</url>
  <url type="bugtracker">https://github.com/asmodehn/pyros-config/issues</url>

  <author email="asmodehn@gmail.com">AlexV</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
  <build_depend version_gte="0.2.0">catkin_pip</build_depend>

  <depend>python-six</depend>
  <depend version_gte="1.2">python-webob</depend>
  <depend version_gte="0.8.5">python-waitress</depend>
  <depend>python-bs4</depend>

  <test_depend>python-nose</test_depend>
  <test_depend>python-mock</test_depend>
  <test_depend>python-pastedeploy</test_depend>
  <test_depend>python-pyquery</test_depend>

  <export>
    <rosdoc external_url="http://webtest.readthedocs.io/en/latest/" />
  </export>

</package>


