<?xml version="1.0"?>
<package format="2">
  <name>marshmallow</name>
  <version>2.9.1</version>
  <description>
A lightweight library for converting complex objects to and from simple Python datatypes. 
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/marshmallow-code/marshmallow</url>
  <url type="bugtracker">https://github.com/marshmallow-code/marshmallow/issues</url>

  <author>Steven Loria</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
  <build_depend version_gte="0.2.0">catkin_pip</build_depend>

  <depend>python-dateutil</depend>
  <depend>python-simplejson</depend>

  <test_depend>python-tz</test_depend>
  <test_depend>python-pytest</test_depend>

  <export>
    <external external_url="http://marshmallow.readthedocs.io/" />
  </export>

</package>


